tests/class_statics/declared_class_static_constructor.js
// @flow

declare class A {
  static constructor: Object; // error
}
